# QG-Flappy-Bird-PSP

./: CMakeLists.txt  README.md  build_psp.sh  main.c
.github/workflows/: build.yml
